[gd_scene load_steps=6 format=3 uid="uid://nxmp5wpmmhts"]

[ext_resource type="Texture2D" uid="uid://cn1j4xnwi2tmy" path="res://textures/charms/gold.png" id="1_6q6s1"]
[ext_resource type="Script" uid="uid://b3cfgf226fki7" path="res://scripts/charm_buy_button.gd" id="2_6q6s1"]
[ext_resource type="AudioStream" uid="uid://cs8wrji00ko24" path="res://sounds/buy.mp3" id="3_i22vj"]
[ext_resource type="AudioStream" uid="uid://p335ul4ty6oi" path="res://sounds/error.mp3" id="4_d651f"]

[sub_resource type="LabelSettings" id="LabelSettings_8s7al"]
font_size = 32
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="RoomBuyButton" type="TextureButton"]
custom_minimum_size = Vector2(128, 128)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_6q6s1")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_6q6s1")

[node name="Buy" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_i22vj")

[node name="Error" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_d651f")

[node name="Label" type="Label" parent="."]
layout_mode = 1
offset_right = 117.0
offset_bottom = 45.0
text = " $50"
label_settings = SubResource("LabelSettings_8s7al")

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
